# python-combiner

./: LICENSE  README.md  __main__.py  pyproject.toml
.github/workflows/: publish.yml
src/: processedmodule.py
src/plugin/: __init__.py
src/python_combiner/: __main__.py  cli.py  errors.py  transformers.py
src/python_combiner/plugin/: __init__.py  minifier.py
src/python_compiler/: __main__.py  cli.py  compiler.py
src/python_compiler/plugin/: plugin.py
