[project]
name = "python_combiner"
version = "0.1.0"
authors = [
  { name = "zabackary", email = "137591653+zabackary@users.noreply.github.com" },
]
description = "Smoosh Python modules into one big one."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.scripts]
python-combiner = "python_combiner.cli:main"

[project.urls]
Homepage = "https://github.com/zabackary/python-compiler"
Issues = "https://github.com/zabackary/python-compiler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
